# live-caption-badge

./: .gitignore  README.md
BLEnWifi/: gattc.c  gattc.h  gatts.c  gatts.h  gatts_table_creat_demo.h  station_w_ble_main.c  wifi.c  wifi.h
audio/: lcb-reg  project_description.json  server.py
audio/config/: sdkconfig.h  sdkconfig.json
audio/main/: CMakeLists.txt  Kconfig.projbuild  audio.c  audio.h  http.c  http.h  http_client.c  http_server.c  http_server.h  main.c  tcp_server.c
audio_playback/: cmake_install.cmake  config.env  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in
echo/: .clang-format
echo/main/: audio.c
epaper/: CMakeLists.txt
epaper/main/: CMakeLists.txt  DEV_Config.c  DEV_Config.h  EPD.h  EPD_7in5_V2.c  EPD_7in5_V2.h  GUI_Paint.c  GUI_Paint.h  ImageData.c  ImageData.h  Kconfig.projbuild  SPI.c  SPI.h  bitmap.c  bitmap.h  caption.c  epaper.c  epaper.h  font12CN.c  font20.c  font24.c  font24CN.c  font32.c  fonts.h  main.c  ui.c  ui.h
firmware/: .clang-format  CMakeLists.txt  partitions.csv
pcb/: #auto_saved_files#  _autosave-epaper_driver.kicad_sch  audio.kicad_sch  bom.csv  bom.ods  epaper.kicad_sch  epaper_driver.kicad_sch  fp-lib-table  live-caption-badge.kicad_pcb  live-caption-badge.kicad_prl  live-caption-badge.kicad_pro  live-caption-badge.kicad_sch  live-caption-badge.kicad_sym  sym-lib-table  todo  ~live-caption-badge.kicad_sch.lck
transcribe/: bin  dashboard.csv  gattc.c  hack.py  project_client.py  project_server.py  record_raw_http.c  sdkconfig  server_esp.py  station_w_ble_main.c  test_simple.py
(+91 files in other folders)
