idf_component_register(SRCS "epaper.c"
                            "SPI.c"
                            "DEV_Config.c"
                            "EPD_7in5_V2.c"
                            "font8.c"
                            "font12.c"
                            "font16.c"
                            "font20.c"
                            "font24.c"
                            "font48.c"
                            "GUI_Paint.c" INCLUDE_DIRS ".")
